fix wrapping issue with guild member card

--- a/Client/src/Components/GuildMemberCard.scss
+++ b/Client/src/Components/GuildMemberCard.scss
@@ -51,12 +51,14 @@
 
           .date {
             display: flex;
+            overflow: hidden;
             align-items: center;
             .MuiSvgIcon-root,
             .MuiTypography-root {
               font-size: 12px;
               opacity: 0.8;
               font-weight: 200;
+              white-space: nowrap;
             }
 
             .MuiSvgIcon-root {
